objects/smartlists__Smart_List_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>smartlists__Badge_Style_Field__c</fullName>
        <inlineHelpText>API name of the formula field returning the background and text color of the badge</inlineHelpText>
        <label>Badge Style Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Column_Width__c</fullName>
        <inlineHelpText>Width of the column in pixels. If left empty, the width is automatically determined by the system</inlineHelpText>
        <label>Column Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Default_Sort_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for sorting the list when it is displayed. for the first time</description>
        <label>Default Sort Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Display_Order__c</fullName>
        <inlineHelpText>Position of the field in the list from lowest to greatest</inlineHelpText>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Display_Position__c</fullName>
        <inlineHelpText>Position of the field in the list from lowest to greatest</inlineHelpText>
        <label>Display Position in List</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Display_Position_in_Quick_Filters__c</fullName>
        <inlineHelpText>Position of the field in the Filters Panel from lowest to greatest. If not specified, the display position is determined by the display position in the list</inlineHelpText>
        <label>Display Position in Filters Panel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Display_Type__c</fullName>
        <inlineHelpText>Display type of the field. Required with Apex Data Source lists. 
File Preview can only be used with Files lists.</inlineHelpText>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOLEAN</fullName>
                    <label>Boolean</label>
                </value>
                <value>
                    <fullName>CLICK2DIAL</fullName>
                    <label>Click-to-Dial</label>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>CURRENCY_CONVERTED</fullName>
                    <label>Currency Converted</label>
                </value>
                <value>
                    <fullName>CURRENCY_FORMATTED</fullName>
                    <label>Currency Formatted</label>
                </value>
                <value>
                    <fullName>DATE</fullName>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                    <label>Datetime</label>
                </value>
                <value>
                    <fullName>DOUBLE</fullName>
                    <label>Double</label>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>FILE_PREVIEW</fullName>
                    <label>File Preview</label>
                </value>
                <value>
                    <fullName>HTML</fullName>
                    <label>Html</label>
                </value>
                <value>
                    <fullName>HYPERLINK_DETAIL</fullName>
                    <label>Hyperlink to Detail</label>
                </value>
                <value>
                    <fullName>INTEGER</fullName>
                    <label>Integer</label>
                </value>
                <value>
                    <fullName>LOCATION</fullName>
                    <label>Location</label>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                    <label>Percent</label>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>PICKLIST</fullName>
                    <label>Picklist</label>
                </value>
                <value>
                    <fullName>STRING</fullName>
                    <label>String</label>
                </value>
                <value>
                    <fullName>TIME</fullName>
                    <label>Time</label>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>URL_LABEL</fullName>
                    <label>URL with Label</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Display_as_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the field will be rendered as a badge</inlineHelpText>
        <label>Display as Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Dynamic_Style_Field__c</fullName>
        <inlineHelpText>API  name of a text formula field returning the dynamic styling attributes of the field</inlineHelpText>
        <label>Dynamic Style Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Editable_in_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the field is editable if the running user has the edit right on the field and the field data type is editable</description>
        <label>Inline Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Field_Alignment__c</fullName>
        <inlineHelpText>Specify how the content is aligned in the cells</inlineHelpText>
        <label>Field Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Field_Label__c</fullName>
        <inlineHelpText>Enter a text value or $Label­.CustomLabelName or leave blank.
Required with Apex Data Source lists.
With Files and SOQL lists, the label of the database field is used if left blank</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Field_Name__c</fullName>
        <inlineHelpText>With SOQL and Files lists, API name of the field. Can include a reference to a parent object: Owner.Name or ProductType__r.Subtype__c

Field name for Apex Data Source</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__File_Edit__c</fullName>
        <inlineHelpText>Used with Files lists only. If checked, the field is displayed in the File Edit Form.</inlineHelpText>
        <label>Editable in File Edit Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>EditableRequired</fullName>
                    <label>Editable and required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Filterable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is deprecated: Use Display in Quick Filters instead
The field is filterable in the quick filters. Only used with Apex Data Source</inlineHelpText>
        <label>Filterable (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Hyperlink_to_Detail_Id_Field__c</fullName>
        <inlineHelpText>Only used if Display Type = Hyperlink to Detail.
Field of the record containing the Id of the target record.
For SOQL and Files list, enter a value if you don&apos;t want to use the default value
Required for Apex Data Source.</inlineHelpText>
        <label>Hyperlink to Detail: Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__List_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the field is displayed in the list.
Leave unchecked if you don&apos;t want to display the field in the list but want to display it in the Quick Filters or in the File Edit Form</inlineHelpText>
        <label>Display in List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Lookup_SOQL_Filter__c</fullName>
        <inlineHelpText>SOQL Filter used for retrieving the records in a lookup field.
Example: Type = &apos;Dealer&apos; AND Active__c = true</inlineHelpText>
        <label>Lookup: SOQL Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Lookup_Subtitle_Field__c</fullName>
        <inlineHelpText>Field that is displayed in the lookup search results in addition to Name
Must be a Text field</inlineHelpText>
        <label>Lookup Subtitle Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Lookup_in_Quick_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the filter is displayed as a lookup in the Filters Panel. Otherwise, it is displayed as text field
Examples for Account.Name on Cases list:
- if checked and user picks the Edge Corp. account, the search will return all cases related to this account.
- If unchecked and user enters Acme in the text field, the search will return all the cases related to accounts containing Acme in their name: Acme Corp., Acme Construction
Only available for related fields of type Text</inlineHelpText>
        <label>Lookup in Filters Panel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Number_of_columns__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of columns used by the field in the tile.
Example with a Tile Layout of 1x3, a value of 2 will specify that the field must be displayed on 2 of the 3 columns of the row</description>
        <label>Number of columns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Quick_Filters_Field__c</fullName>
        <defaultValue>&apos;Yes if Filterable&apos;</defaultValue>
        <inlineHelpText>If &apos;Yes if Filterable&apos; is selected, the field will be added to the Filters Panel if it is filterable at the object level. Some fields are not filterable because of their data type or because they are encrypted with the probabilistic algorithm</inlineHelpText>
        <label>Display in Filters Panel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes if Filterable</fullName>
                    <default>true</default>
                    <label>Yes if Filterable</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Smart_List_Definition__c</fullName>
        <label>Smart List Definition</label>
        <referenceTo>smartlists__Smart_List_Definition__mdt</referenceTo>
        <relationshipLabel>Smart List Fields</relationshipLabel>
        <relationshipName>Smart_List_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>smartlists__Sortable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is deprecated: Use Sortable in list instead
The field is sortable in the list. Only used with Apex Data Source</inlineHelpText>
        <label>Sortable (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Sortable_in_List__c</fullName>
        <defaultValue>&apos;Yes if Sortable&apos;</defaultValue>
        <inlineHelpText>With &apos;Yes if Sortable (Nulls First) or (Nulls Last)&apos; is selected, the field will be sortable in the list if the data type of the field is sortable in Salesforce. Example: Text is sortable and Text Area Long is not
Nulls First: null values are displayed before non null values
Nulls Last: null values are displayed after non null values</inlineHelpText>
        <label>Sortable in List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes if Sortable</fullName>
                    <default>true</default>
                    <label>Yes if Sortable (Nulls First)</label>
                </value>
                <value>
                    <fullName>Yes-NullsLast</fullName>
                    <label>Yes if Sortable (Nulls Last)</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Tile_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the field is part of the Tite header, otherwise it is part of the tile content</inlineHelpText>
        <label>Display in Tile Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__URL_Target__c</fullName>
        <inlineHelpText>Select _self if you want to display the URL in the current tab. Select _blank if you want to display the URL in a new tab.
Note: _self can only be used with Salesforce URLs. Non Salesforce URLs are opened in a new tab</inlineHelpText>
        <label>URL with Label: Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_blank</fullName>
                    <default>true</default>
                    <label>_blank</label>
                </value>
                <value>
                    <fullName>_parent</fullName>
                </value>
                <value>
                    <fullName>_self</fullName>
                    <label>_self (Salesforce URL only)</label>
                </value>
                <value>
                    <fullName>_top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__URL_Value__c</fullName>
        <inlineHelpText>Field returning the URL associated to the URL label returned by Field Name</inlineHelpText>
        <label>URL with Label: Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Wrap_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the row will be expanded to display the content of the cell on several lines. Otherwise, the content of the cell is clipped to the size of the column</inlineHelpText>
        <label>Wrap Text</label>
        <type>Checkbox</type>
    </fields>
    <label>Smart List Field</label>
    <listViews>
        <fullName>smartlists__All</fullName>
        <columns>smartlists__Smart_List_Definition__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Smart List Fields</pluralLabel>
    <validationRules>
        <fullName>smartlists__Check_Badge_Style_Field</fullName>
        <active>true</active>
        <errorConditionFormula>smartlists__Display_as_Badge__c = true &amp;&amp;  ISBLANK( smartlists__Badge_Style_Field__c )</errorConditionFormula>
        <errorDisplayField>smartlists__Badge_Style_Field__c</errorDisplayField>
        <errorMessage>Badge Style Field is required if the field is displayed as a Badge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Display_Position</fullName>
        <active>true</active>
        <errorConditionFormula>smartlists__List_Field__c == true &amp;&amp; ISBLANK(smartlists__Display_Position__c)</errorConditionFormula>
        <errorDisplayField>smartlists__Display_Position__c</errorDisplayField>
        <errorMessage>Display Position is required for List fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Display_Position_QuickFilters</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( smartlists__Quick_Filters_Field__c, &apos;Yes if Filterable&apos; ) &amp;&amp; ISBLANK( smartlists__Display_Position_in_Quick_Filters__c )</errorConditionFormula>
        <errorDisplayField>smartlists__Display_Position_in_Quick_Filters__c</errorDisplayField>
        <errorMessage>Display Position is required for Filters Panel fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Display_Type_Picklist</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos;) &amp;&amp; ISPICKVAL(smartlists__Display_Type__c, &apos;Picklist&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__Display_Type__c</errorDisplayField>
        <errorMessage>Picklist is not supported for Apex Data Source lists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Display_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos;) &amp;&amp; ISPICKVAL(smartlists__Display_Type__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__Display_Type__c</errorDisplayField>
        <errorMessage>Display Type is required for Apex Data Source lists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Editable_in_List_Related_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>smartlists__Editable_in_List__c &amp;&amp;(LEN( smartlists__Field_Name__c ) - LEN ( SUBSTITUTE ( smartlists__Field_Name__c , &apos;.&apos;, &apos;&apos;))) &gt; 1</errorConditionFormula>
        <errorDisplayField>smartlists__Editable_in_List__c</errorDisplayField>
        <errorMessage>Fields can only be edited if they are on the base object or are related to a parent record of the base object.
Example on Account: Parent.Parent.Name is not editable because it is on the parent account  of the parent account. Parent.Name is editable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Field_Label</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos;) &amp;&amp; ISBLANK(smartlists__Field_Label__c)</errorConditionFormula>
        <errorDisplayField>smartlists__Field_Label__c</errorDisplayField>
        <errorMessage>Field Label is required for Apex Data Source lists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_File_Preview</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Files&apos;) &amp;&amp; ISPICKVAL(smartlists__Display_Type__c, &apos;FILE_PREVIEW&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__Display_Type__c</errorDisplayField>
        <errorMessage>&apos;File Preview&apos; can only be used with Files list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Hyperlink_To_Detail</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL (smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos; ) &amp;&amp; ISPICKVAL(smartlists__Display_Type__c, &apos;HYPERLINK_DETAIL&apos;) &amp;&amp; ISBLANK(smartlists__Hyperlink_to_Detail_Id_Field__c)</errorConditionFormula>
        <errorDisplayField>smartlists__Hyperlink_to_Detail_Id_Field__c</errorDisplayField>
        <errorMessage>Hyperlink to Detail Id Field is required when Display Type is Hyperlink to Detail for an Apex Data Source</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Lookup_Subtitle</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( smartlists__Lookup_Subtitle_Field__c , &apos;.&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__Lookup_Subtitle_Field__c</errorDisplayField>
        <errorMessage>Lookup Subtitle cannot be a related field such as Account.Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Lookup_on_Related_Field</fullName>
        <active>true</active>
        <errorConditionFormula>smartlists__Lookup_in_Quick_Filters__c &amp;&amp; smartlists__Field_Name__c != &apos;Owner&apos; &amp;&amp; (LEN( smartlists__Field_Name__c ) - LEN ( SUBSTITUTE ( smartlists__Field_Name__c , &apos;.&apos;, &apos;&apos;))) &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>smartlists__Lookup_in_Quick_Filters__c</errorDisplayField>
        <errorMessage>Lookup in Quick Filters is only available for related parent fields such as Account.Name or for Owner. It is not available for base fields such as Name or related grand parent fields such as Account.Parent.Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Number_of_Columns</fullName>
        <active>true</active>
        <errorConditionFormula>smartlists__Number_of_columns__c &lt; 1 ||  smartlists__Number_of_columns__c &gt; 3</errorConditionFormula>
        <errorDisplayField>smartlists__Number_of_columns__c</errorDisplayField>
        <errorMessage>Number of Columns must be between 1 and 3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_URL_Value</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( smartlists__URL_Value__c ) &amp;&amp;  ISPICKVAL( smartlists__Display_Type__c , &apos;URL_LABEL&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__URL_Value__c</errorDisplayField>
        <errorMessage>URL Value is required for Display Type &apos;URL with Label&apos;</errorMessage>
    </validationRules>
</CustomObject>